# TFTP_PG

./: .gitignore  CMakeLists.txt  TFTP_PG  TFTP_PG_C  client_main.cpp  main.cpp
libs/: checksum.cpp  checksum.h  client.cpp  client.h  header.cpp  header.h  helpers.cpp  helpers.h  server.cpp  server.h
